--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.4</version>
+        <relativePath/>
+    </parent>
 
     <groupId>com.example</groupId>
     <artifactId>kalix-demo</artifactId>
@@ -20,12 +26,15 @@
         <jdk.target>17</jdk.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <kalix-sdk.version>1.1.7-48-e492090b-dev-SNAPSHOT</kalix-sdk.version>
-        <akka-grpc.version>2.1.4</akka-grpc.version>
+        <kalix-sdk.version>1.2.1-M4-26-f7d44aab-SNAPSHOT</kalix-sdk.version>
     </properties>
 
     <build>
         <resources>
+            <!-- Add the generated protobuf descriptor to the classpath, so that source mapping works -->
+            <resource>
+                <directory>${project.build.directory}/generated-resources</directory>
+            </resource>
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
@@ -39,40 +48,44 @@
             </extension>
         </extensions>
 
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                            <configuration>
+                                <transformers combine.children="append">
+                                    <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                        <resource>reference.conf</resource>
+                                    </transformer>
+                                </transformers>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${jdk.target}</source>
+                    <target>${jdk.target}</target>
+                    <compilerArgs>
+                        <arg>-Xlint:deprecation</arg>
+                        <arg>-parameters</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>reference.conf</resource>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${mainClass}</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -129,36 +142,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>-Dlogging.config=src/main/resources/logback-dev-mode.xml</argument>
-                        <argument>${mainClass}</argument>
-                    </arguments>
-                    <environmentVariables>
-                        <!-- needed for the proxy to access the user function on all platforms -->
-                        <HOST>0.0.0.0</HOST>
-                    </environmentVariables>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <!-- configure src/it/java and src/it/resources -->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>add-integration-test-source</id>
@@ -192,7 +178,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
                 <configuration>
                     <argLine>--enable-preview</argLine>
                     <excludes>
@@ -209,29 +194,21 @@
                 <executions>
                     <execution>
                         <goals>
+                            <goal>generate</goal>
                             <goal>deploy</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
+                    <jvmArgs>
+                        <arg>--enable-preview</arg>
+                    </jvmArgs>
                     <dockerImage>${dockerImage}:${dockerTag}</dockerImage>
                     <mainClass>${mainClass}</mainClass>
                     <integrationTestSourceDirectory>src/it/java</integrationTestSourceDirectory>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
-                    <systemPropertyVariables>
-                        <logging.config>src/main/resources/logback-dev-mode.xml</logging.config>
-                        <kalix.user-function-interface>0.0.0.0</kalix.user-function-interface>
-                        <spring.profiles.active>all</spring.profiles.active>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -262,6 +239,7 @@
                                     <goal>verify</goal>
                                 </goals>
                                 <configuration>
+                                    <argLine>--enable-preview</argLine>
                                     <includes>
                                         <include>**/*IntegrationTest</include>
                                     </includes>
@@ -285,6 +263,7 @@
             <artifactId>vavr</artifactId>
             <version>0.10.4</version>
         </dependency>
+
         <dependency>
             <groupId>io.kalix</groupId>
             <artifactId>kalix-spring-boot-starter-test</artifactId>
@@ -295,25 +274,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.5.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.23.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>4.2.0</version>
         </dependency>
 
     </dependencies>
