--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <jdk.target>17</jdk.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <kalix-sdk.version>1.2.1-M4-26-f7d44aab-SNAPSHOT</kalix-sdk.version>
+        <kalix-sdk.version>1.2.1</kalix-sdk.version>
     </properties>
 
     <build>
