--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,20 @@
 # - uncomment the env var PUBSUB_EMULATOR_HOST and the section below for gcloud-pubsub-emulator service
 version: "3"
 services:
-  kalix-proxy:
-    image: gcr.io/kalix-public/kalix-proxy:1.1.8
+  kalix-runtime:
+    image: gcr.io/kalix-public/kalix-runtime:1.1.35
+    container_name: kalix-demo
     ports:
-      - "9000:9000"
+      - "${ADVERTISED_HTTP_PORT}:9000"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
       JAVA_TOOL_OPTIONS: >
-        -Dconfig.resource=dev-mode.conf
-        -Dlogback.configurationFile=logback-dev-mode.xml
-      USER_FUNCTION_HOST: ${USER_FUNCTION_HOST:-host.docker.internal}
-      USER_FUNCTION_PORT: ${USER_FUNCTION_PORT:-8080}
-      # Comment to enable ACL check in dev-mode (see https://docs.kalix.io/services/using-acls.html#_local_development_with_acls)
-      ACL_ENABLED: "false"
-      #PUBSUB_EMULATOR_HOST: gcloud-pubsub-emulator
-  #gcloud-pubsub-emulator:
-  #  image: gcr.io/google.com/cloudsdktool/cloud-sdk:432.0.0-emulators
-  #  command: gcloud beta emulators pubsub start --project=test --host-port=0.0.0.0:8085
-  #  ports:
-  #    - 8085:8085
+      # jvm -D properties can be added under this environment map (note: remove this comment when adding properties)
+
+      # those variables are defined in the .env file
+      # when running multiple services on your local machine, make sure that
+      # the ports are unique by editing the corresponding .env files
+      ADVERTISED_HTTP_PORT: ${ADVERTISED_HTTP_PORT}
+      USER_SERVICE_HOST: ${USER_SERVICE_HOST}
+      USER_SERVICE_PORT: ${USER_SERVICE_PORT}
